[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-poetry-template"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"

[tool.mypy]
strict = true
show_error_codes = true
show_column_numbers = true

warn_unused_ignores = true
ignore_missing_imports = true
follow_imports = "normal"
namespace_packages = true
allow_redefinition = true
implicit_reexport = false
no_implicit_optional = true

# using Any type
warn_return_any = true
disallow_any_expr = true
disallow_any_unimported = true

# function type hints
check_untyped_defs = true
allow_incomplete_defs = true
allow_untyped_defs = true
allow_untyped_calls = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pyright]
typeCheckingMode = "strict"
stubPath = "./.type_stubs"
venvPath = "./.venv"
pythonPlatform = "All"
include = ["./*"]
exclude = ["**/node_modules", "**/__pycache__"]
useLibraryCodeForTypes = true
verboseOutput = false
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true
column_limit = 119
allow_split_before_dict_value = false

[tool.autoflake]
check = false
in-place = true
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1.3.1"

[tool.pyright.defineConstant]
DEBUG = true

[tool.pylint.MASTER]
load-plugins = "pylint_quotes"
persistent = "yes"
suggestion-mode = "yes"
unsafe-load-any-extension = "yes"
variable-rgx = "((([a-z_][a-z0-9_]{2,})|(_[a-z0-9_]*)|(__[a-z][a-z0-9_]+__))$)|([A-Z_][A-Z0-9_]+$)"

[tool.pylint.format]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"
disable = "missing-docstring\n"

[tool.pylint.IMPORTS]
allow-any-import-level = ""
allow-wildcard-with-all = "no"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pylint = "^2.15.9"
pylint-quotes = "^0.2.3"
isort = "^5.11.4"
yapf = "^0.32.0"
unify = "^0.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pyright = "^1.1.285"
types-toml = "^0.10.8.1"
autoflake = "^2.0.0"
pyproject-autoflake = "^1.0.2"
colorama = "^0.4.6"
invoke = "^1.7.3"
types-invoke = "^1.7.3.16"
